--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,3 @@
-body {
-  background-image: url("background.jpg");
-  height: 100vh;
-  font-family: "Pixellari";
-  font-size: 30px;
-  line-height: 35px;
-}
-
 #root,
 .App {
   height: 100vh;
@@ -41,7 +33,7 @@ footer {
   align-self: flex-end;
 }
 .Content-Center {
-  width: 300px;
+  width: 48vw;
   background: white;
 }
 .Content-Right {
