new, opensourced image!

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 body {
-  background-image: url("background.jpg");
-  background-size: 1900px 1200px;
+  background-image: url("background.png");
+  background-size: auto;
+  background-repeat: no-repeat;
   height: 100vh;
   font-family: "Pixellari";
   font-size: 30px;
